--- a/styles/main.less
+++ b/styles/main.less
@@ -66,7 +66,7 @@ table.simple {
   border-left: none;
 
   th {
-    font-size: 1.17em;
+    font-size: 1.2em;
     text-align: right;
     white-space: nowrap;
   }
@@ -83,8 +83,8 @@ table.simple {
   thead tr {
 
     th {
-      border-bottom: solid 2px darkblue;
-      background-color: #ebf4fd;
+      border-bottom: solid 1px lightsteelblue;
+      //background-color: #ebf4fd;
     }
   }
 
@@ -390,7 +390,6 @@ md-autocomplete-wrap {
 
   input[type=search] {
     height: 30px;
-    font-size: 12px;
   }
 }
 
