--- a/templates/mappings/template-constant-edit.html
+++ b/templates/mappings/template-constant-edit.html
@@ -19,7 +19,7 @@
                                  md-selected-item="model.predicate"
                                  md-selected-item-change="selectedItemChange(item)"
                                  md-search-text="searchText"
-                                 md-items="item in querySearch(searchText)"
+                                 md-items="item in suggestPredicate(searchText)"
                                  md-item-text="item"
                                  md-input-minlength="2"
                                  md-delay="300"
