--- a/styles/main.css
+++ b/styles/main.css
@@ -487,6 +487,16 @@ ul.small {
 md-icon svg {
   fill: inherit;
 }
+md-icon.fa {
+  opacity: 0.7;
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -ms-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+}
+md-icon.fa:hover {
+  opacity: 1;
+}
 md-autocomplete-wrap {
   max-height: 30px;
   overflow: hidden;
