--- a/styles/main.less
+++ b/styles/main.less
@@ -384,6 +384,15 @@ md-icon svg {
   fill: inherit;
 }
 
+md-icon.fa{
+  opacity: 0.7;
+  .transition(opacity 0.5s);
+
+  &:hover {
+    opacity:1;
+  }
+}
+
 md-autocomplete-wrap {
   max-height: 30px;
   overflow: hidden;
