--- a/templates/mappings/template-item-rule-edit.html
+++ b/templates/mappings/template-item-rule-edit.html
@@ -41,6 +41,10 @@
             </md-input-container>
 
             <md-checkbox ng-model="r.valid" aria-label="تایید"></md-checkbox>
+
+            <md-button class="md-icon-button" ng-click="ignore(r)" style="margin-top:15px;">
+                <span class="fa fa-2x fa-exclamation-circle" style="color: darkorange;"></span>
+            </md-button>
         </div>
         <div>
             <md-button type="submit" aria-label="ذخیره"
