--- a/templates/mappings/template-item-rule.html
+++ b/templates/mappings/template-item-rule.html
@@ -1,5 +1,9 @@
 <td ng-if="!r.editing">{{$index+1}}</td>
-<td ng-if="!r.editing">{{r.property}}</td>
+<td ng-if="!r.editing">
+    <span class="fa fa-lg fa-file-powerpoint-o filter-property button"
+          ng-click="filterProperty(r, $event)"></span>
+    <span>{{r.property}}</span>
+</td>
 <td ng-if="!r.editing">
     <span>{{r.predicate}}</span>
 </td>
