--- a/templates/mappings/template.html
+++ b/templates/mappings/template.html
@@ -1,7 +1,7 @@
 <md-content layout-margin ng-show="loaded">
 
     <!--<form ng-submit="load()" autocomplete="off">-->
-    <div layout-lg="row" layout-xs="column">
+    <div layout-gt-md="row" layout-xs="column">
         <div layout="row">
             <md-input-container>
                 <label>الگو : </label>
@@ -45,7 +45,6 @@
                 </md-checkbox>
             </div>
         </div>
-
     </div>
 
     <div layout="row" layout-align="right center">
@@ -62,14 +61,21 @@
 
         <div layout-align="left center" flex>
             <cl-paging flex
-                       cl-pages="paging.total"
+                       cl-pages="paging.pageCount"
                        cl-steps="6"
                        cl-page-changed="onPageChanged()"
                        cl-align="center center"
                        cl-current-page="paging.current">
             </cl-paging>
-        </div>
 
+            <div style="color: #888;padding-top: 10px;text-align: center;">
+                صفحه
+                {{paging.current}}
+                <!--<input type="text" ng-model="paging.current" style="width: 45px;border: solid 1px #ddd;border-radius: 2px;text-align: center;">-->
+                از{{paging.pageCount}} - تعداد کل آیتم‌ها {{paging.totalSize}}
+            </div>
+
+        </div>
     </div>
 
     <!--</form>-->
@@ -78,14 +84,14 @@
         <thead>
         <tr>
             <th>#</th>
-            <th>مقدار</th>
-            <th>count</th>
-            <th>class</th>
+            <th>عنوان الگو</th>
+            <th>تراگنجایش</th>
+            <th>کلاس هستان‌شناسی</th>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="item in items" class="clickable">
-            <td ng-click="showItem(item, $event);">{{(paging.pageIndex * paging.size + $index)+1}}</td>
+            <td ng-click="showItem(item, $event);">{{(paging.pageIndex * paging.pageSize + $index)+1}}</td>
             <td ng-click="showItem(item, $event);">{{item.template}}</td>
             <td ng-click="showItem(item, $event);">{{item.weight}}</td>
             <td ng-click="showItem(item, $event);"></td>
