fix some issues

--- a/templates/mappings/property-filter.html
+++ b/templates/mappings/property-filter.html
@@ -12,7 +12,7 @@
 
         <md-dialog-content class="scroll2">
             <div class="md-dialog-content">
-                <h3>تعیین ثابت‌ها</h3>
+                <!--<h3>تعیین ثابت‌ها</h3>-->
                 <table class="simple" cellspacing="0" cellpadding="2">
                     <thead>
                     <tr>
