--- a/templates/mappings/property-filter.html
+++ b/templates/mappings/property-filter.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="{{property}}" style="min-width: 60%; min-height: 60%;">
+<md-dialog id="property-filter" aria-label="{{property}}" style="min-width: 60%; min-height: 60%;">
     <form ng-cloak>
         <md-toolbar>
             <div class="md-toolbar-tools">
