--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -17,7 +17,8 @@
                     <td class="left">
                         <h3>آدرس : </h3>
                     </td>
-                    <td><a ui-sref="ontology.class({classUrl:clazz.url})">{{clazz.url}}</a></td>
+                    <td><a href="{{clazz.url}}">{{clazz.url}}</a></td>
+                    <!--<td><a ui-sref="ontology.class({classUrl:clazz.url})">{{clazz.url}}</a></td>-->
                 </tr>
                 <tr>
                     <td class="left">
