--- a/templates/mappings/property.html
+++ b/templates/mappings/property.html
@@ -84,17 +84,17 @@
                        cl-align="center center"
                        cl-current-page="paging.current">
             </cl-paging>
-
-            <div style="color: #888;padding-top: 10px;text-align: center;">
-                صفحه
-                {{paging.current}}
-                <!--<input type="text" ng-model="paging.current" style="width: 45px;border: solid 1px #ddd;border-radius: 2px;text-align: center;">-->
-                از{{paging.pageCount}} - تعداد کل آیتم‌ها {{paging.totalSize}}
-            </div>
-
         </div>
     </div>
 
+
+    <md-divider></md-divider>
+    <div style="color: #888;padding-top: 10px;text-align: center;">
+        صفحه
+        {{paging.current}}
+        <!--<input type="text" ng-model="paging.current" style="width: 45px;border: solid 1px #ddd;border-radius: 2px;text-align: center;">-->
+        از{{paging.pageCount}} - تعداد کل آیتم‌ها {{paging.totalSize}}
+    </div>
     <md-divider></md-divider>
 
     <table class="simple" cellspacing="0" cellpadding="5">
